--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -2811,6 +2811,11 @@ botany {
 }
 
 
+bqrf {
+    B:rfstation=false
+}
+
+
 buildcraftbuilders {
     B:architectBlock=false
     B:buildToolBlock=true
@@ -4357,6 +4362,13 @@ chisel {
 
 chromaticraft {
     B:chromaticraftblockadjacency=false
+    B:chromaticraftblockantkey=false
+    B:chromaticraftblockantkey.1=false
+    B:chromaticraftblockantkey.15=false
+    B:chromaticraftblockantkey.2=false
+    B:chromaticraftblockantkey.3=false
+    B:chromaticraftblockantkey.5=false
+    B:chromaticraftblockantkey.7=false
     B:chromaticraftblockchroma=false
     B:chromaticraftblockcoloraltar=false
     B:chromaticraftblockcolorlock=false
@@ -6521,6 +6533,7 @@ galacticraftmars {
 galaxyspace {
     B:acentauribbgrunt=true
     B:acentauribbsubgrunt=true
+    B:assemblymachine=false
     B:barnarda2dandelion1=false
     B:barnarda2dandelion2=false
     B:barnarda2dirt=true
@@ -6532,10 +6545,13 @@ galaxyspace {
     B:barnardaCdandelion1=false
     B:barnardaCdandelion2=false
     B:barnardaCdandelion3=false
+    B:barnardaCdandelions=false
+    B:barnardaCdandelions.1=false
     B:barnardaCdirt=true
     B:barnardaCgrass=false
     B:barnardaCleaves=false
     B:barnardaClog=true
+    B:barnardaCplanks=true
     B:barnardaCsapling=false
     B:barnardaEgrunt=true
     B:barnardaEoregold=true
@@ -6543,9 +6559,11 @@ galaxyspace {
     B:barnardaEsubgrunt=true
     B:barnardaFgrunt=true
     B:barnardaFsubgrunt=true
+    B:callistoblocks=true
     B:callistogrunt=true
     B:callistosubgrunt=true
     B:ceresTChestT4=false
+    B:ceresblocks=true
     B:ceresbricks=true
     B:ceresglowstone=true
     B:ceresgrunt=true
@@ -6555,11 +6573,13 @@ galaxyspace {
     B:ceresweb=false
     B:decolead=true
     B:decoratecopperblock=true
+    B:deimosblocks=true
     B:deimosgrunt=true
     B:deimosoriharukonore=true
     B:deimossubgrunt=true
     B:deimostinore=true
     B:enceladusTChestT6=false
+    B:enceladusblocks=true
     B:enceladusbricks=true
     B:enceladuscrystal=false
     B:enceladusglowstone=true
@@ -6569,14 +6589,18 @@ galaxyspace {
     B:europagrunt=true
     B:europaice=true
     B:europaunderwatergeyser=true
+    B:fuelgenerator=false
+    B:ganymedeblocks=true
     B:ganymedegrunt=true
     B:ganymedemagnesiumore=true
     B:ganymedesubgrunt=true
     B:ganymedetitanuimore=true
     B:geothermalgenerator=false
+    B:haumeablocks=true
     B:haumeagrunt=true
     B:ioTChestT5=false
     B:ioash=true
+    B:ioblocks=true
     B:iobricks=true
     B:iocopperore=true
     B:iodualstone=true
@@ -6589,6 +6613,7 @@ galaxyspace {
     B:liquidmethane=false
     B:makemakegrunt=true
     B:makemakesubgrunt=true
+    B:mercuryblocks=true
     B:mercurycore=true
     B:mercurygrunt=true
     B:mercuryironore=true
@@ -6596,15 +6621,18 @@ galaxyspace {
     B:mercurynickelore=true
     B:mercurysubgrunt=true
     B:oberonadamantiteore=true
+    B:oberonblocks=true
     B:oberongrunt=true
     B:oberonstone=true
     B:oberonsubgrunt=true
+    B:phobosblocks=true
     B:phoboscobaltumore=true
     B:phobosdeshore=true
     B:phobosgrunt=true
     B:phobosstone=true
     B:phobossubgrunt=true
     B:plutoTChestT8=false
+    B:plutoblocks=true
     B:plutobricks=true
     B:plutoglowstone=true
     B:plutogrunt=true
@@ -6614,6 +6642,7 @@ galaxyspace {
     B:plutostone=true
     B:plutosubgrunt=true
     B:proteusTChestT7=false
+    B:proteusblocks=true
     B:proteusbricks=true
     B:proteusglowstone=true
     B:proteusgrunt=true
@@ -6621,11 +6650,13 @@ galaxyspace {
     B:proteusstone=true
     B:proteussubgrunt=true
     B:proteuswolframiumore=true
+    B:solarwindpanel=false
     B:tileMethane=false
     B:tileUnknowWater=false
     B:titangrunt=true
     B:titanstone=true
     B:titansubgrunt=true
+    B:tritonblocks=true
     B:tritongrunt=true
     B:tritonmithrilore=true
     B:tritonstone=true
@@ -6633,6 +6664,7 @@ galaxyspace {
     B:unknowwater=false
     B:vegabgrunt=true
     B:vegabsubgrunt=true
+    B:venusblocks=true
     B:venusdiamondore=true
     B:venusgrunt=true
     B:venussubgrunt=true
@@ -6886,6 +6918,10 @@ gardentrees {
     B:thinlog.13151=false
     B:thinlog.13152=false
     B:thinlog.13153=false
+    B:thinlog.13171=false
+    B:thinlog.13172=false
+    B:thinlog.13173=false
+    B:thinlog.13174=false
     B:thinlog.13235=false
     B:thinlog.13236=false
     B:thinlog.13237=false
@@ -7090,6 +7126,10 @@ gardentrees {
     B:thinlog.4959=false
     B:thinlog.4960=false
     B:thinlog.4961=false
+    B:thinlog.4979=false
+    B:thinlog.4980=false
+    B:thinlog.4981=false
+    B:thinlog.4982=false
     B:thinlog.5=false
     B:thinlog.5043=false
     B:thinlog.5044=false
@@ -7285,6 +7325,10 @@ gardentrees {
     B:thinlog.8787=false
     B:thinlog.8813=false
     B:thinlog.8823=false
+    B:thinlog.883=false
+    B:thinlog.884=false
+    B:thinlog.885=false
+    B:thinlog.886=false
     B:thinlog.8888=false
     B:thinlog.8889=false
     B:thinlog.8890=false
@@ -7322,6 +7366,10 @@ gardentrees {
     B:thinlog.9055=false
     B:thinlog.9056=false
     B:thinlog.9057=false
+    B:thinlog.9075=false
+    B:thinlog.9076=false
+    B:thinlog.9077=false
+    B:thinlog.9078=false
     B:thinlog.9139=false
     B:thinlog.9140=false
     B:thinlog.9141=false
@@ -7565,6 +7613,10 @@ gardentrees {
     B:thinlogfence.13151=false
     B:thinlogfence.13152=false
     B:thinlogfence.13153=false
+    B:thinlogfence.13171=false
+    B:thinlogfence.13172=false
+    B:thinlogfence.13173=false
+    B:thinlogfence.13174=false
     B:thinlogfence.13235=false
     B:thinlogfence.13236=false
     B:thinlogfence.13237=false
@@ -7769,6 +7821,10 @@ gardentrees {
     B:thinlogfence.4959=false
     B:thinlogfence.4960=false
     B:thinlogfence.4961=false
+    B:thinlogfence.4979=false
+    B:thinlogfence.4980=false
+    B:thinlogfence.4981=false
+    B:thinlogfence.4982=false
     B:thinlogfence.5=false
     B:thinlogfence.5043=false
     B:thinlogfence.5044=false
@@ -7964,6 +8020,10 @@ gardentrees {
     B:thinlogfence.8787=false
     B:thinlogfence.8813=false
     B:thinlogfence.8823=false
+    B:thinlogfence.883=false
+    B:thinlogfence.884=false
+    B:thinlogfence.885=false
+    B:thinlogfence.886=false
     B:thinlogfence.8888=false
     B:thinlogfence.8889=false
     B:thinlogfence.8890=false
@@ -8001,6 +8061,10 @@ gardentrees {
     B:thinlogfence.9055=false
     B:thinlogfence.9056=false
     B:thinlogfence.9057=false
+    B:thinlogfence.9075=false
+    B:thinlogfence.9076=false
+    B:thinlogfence.9077=false
+    B:thinlogfence.9078=false
     B:thinlogfence.9139=false
     B:thinlogfence.9140=false
     B:thinlogfence.9141=false
