--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -329,6 +329,12 @@ shedding {
     I:Cricket.metadata=0
     I:Cricket.rate=-1
 
+    # Configuration of Shedding for CustomNpc
+    S:CustomNpc.item=
+    I:CustomNpc.lexiconDisplaySize=40
+    I:CustomNpc.metadata=0
+    I:CustomNpc.rate=-1
+
     # Configuration of Shedding for DraconicEvolution.ChaosGuardian
     S:DraconicEvolution.ChaosGuardian.item=
     I:DraconicEvolution.ChaosGuardian.lexiconDisplaySize=40
@@ -348,6 +354,12 @@ shedding {
     I:EAReplicator.lexiconDisplaySize=40
     I:EAReplicator.metadata=0
     I:EAReplicator.rate=-1
+
+    # Configuration of Shedding for ESM_Ghast
+    S:ESM_Ghast.item=
+    I:ESM_Ghast.lexiconDisplaySize=40
+    I:ESM_Ghast.metadata=0
+    I:ESM_Ghast.rate=-1
 
     # Configuration of Shedding for EnderDragon
     S:EnderDragon.item=
@@ -1189,6 +1201,12 @@ shedding {
     I:MutantCreatures.ZombieMinion.metadata=0
     I:MutantCreatures.ZombieMinion.rate=-1
 
+    # Configuration of Shedding for NEAT_Zombie
+    S:NEAT_Zombie.item=
+    I:NEAT_Zombie.lexiconDisplaySize=40
+    I:NEAT_Zombie.metadata=0
+    I:NEAT_Zombie.rate=-1
+
     # Configuration of Shedding for Natura.FlameSpider
     S:Natura.FlameSpider.item=
     I:Natura.FlameSpider.lexiconDisplaySize=40
@@ -1212,6 +1230,18 @@ shedding {
     I:Natura.NitroCreeper.lexiconDisplaySize=40
     I:Natura.NitroCreeper.metadata=0
     I:Natura.NitroCreeper.rate=-1
+
+    # Configuration of Shedding for NpcDragon
+    S:NpcDragon.item=
+    I:NpcDragon.lexiconDisplaySize=40
+    I:NpcDragon.metadata=0
+    I:NpcDragon.rate=-1
+
+    # Configuration of Shedding for NpcSlime
+    S:NpcSlime.item=
+    I:NpcSlime.lexiconDisplaySize=40
+    I:NpcSlime.metadata=0
+    I:NpcSlime.rate=-1
 
     # Configuration of Shedding for OpenBlocks.Luggage
     S:OpenBlocks.Luggage.item=
@@ -1969,6 +1999,150 @@ shedding {
     I:chisel.snowman.metadata=0
     I:chisel.snowman.rate=-1
 
+    # Configuration of Shedding for customnpcs.CustomNpc
+    S:customnpcs.CustomNpc.item=
+    I:customnpcs.CustomNpc.lexiconDisplaySize=40
+    I:customnpcs.CustomNpc.metadata=0
+    I:customnpcs.CustomNpc.rate=-1
+
+    # Configuration of Shedding for customnpcs.NpcDragon
+    S:customnpcs.NpcDragon.item=
+    I:customnpcs.NpcDragon.lexiconDisplaySize=40
+    I:customnpcs.NpcDragon.metadata=0
+    I:customnpcs.NpcDragon.rate=-1
+
+    # Configuration of Shedding for customnpcs.NpcSlime
+    S:customnpcs.NpcSlime.item=
+    I:customnpcs.NpcSlime.lexiconDisplaySize=40
+    I:customnpcs.NpcSlime.metadata=0
+    I:customnpcs.NpcSlime.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcEnderman
+    S:customnpcs.npcEnderman.item=
+    I:customnpcs.npcEnderman.lexiconDisplaySize=40
+    I:customnpcs.npcEnderman.metadata=0
+    I:customnpcs.npcEnderman.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcGolem
+    S:customnpcs.npcGolem.item=
+    I:customnpcs.npcGolem.lexiconDisplaySize=40
+    I:customnpcs.npcGolem.metadata=0
+    I:customnpcs.npcGolem.rate=-1
+
+    # Configuration of Shedding for customnpcs.npccrystal
+    S:customnpcs.npccrystal.item=
+    I:customnpcs.npccrystal.lexiconDisplaySize=40
+    I:customnpcs.npccrystal.metadata=0
+    I:customnpcs.npccrystal.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcdwarffemale
+    S:customnpcs.npcdwarffemale.item=
+    I:customnpcs.npcdwarffemale.lexiconDisplaySize=40
+    I:customnpcs.npcdwarffemale.metadata=0
+    I:customnpcs.npcdwarffemale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcdwarfmale
+    S:customnpcs.npcdwarfmale.item=
+    I:customnpcs.npcdwarfmale.lexiconDisplaySize=40
+    I:customnpcs.npcdwarfmale.metadata=0
+    I:customnpcs.npcdwarfmale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcelffemale
+    S:customnpcs.npcelffemale.item=
+    I:customnpcs.npcelffemale.lexiconDisplaySize=40
+    I:customnpcs.npcelffemale.metadata=0
+    I:customnpcs.npcelffemale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcelfmale
+    S:customnpcs.npcelfmale.item=
+    I:customnpcs.npcelfmale.lexiconDisplaySize=40
+    I:customnpcs.npcelfmale.metadata=0
+    I:customnpcs.npcelfmale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcenderchibi
+    S:customnpcs.npcenderchibi.item=
+    I:customnpcs.npcenderchibi.lexiconDisplaySize=40
+    I:customnpcs.npcenderchibi.metadata=0
+    I:customnpcs.npcenderchibi.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcfurryfemale
+    S:customnpcs.npcfurryfemale.item=
+    I:customnpcs.npcfurryfemale.lexiconDisplaySize=40
+    I:customnpcs.npcfurryfemale.metadata=0
+    I:customnpcs.npcfurryfemale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcfurrymale
+    S:customnpcs.npcfurrymale.item=
+    I:customnpcs.npcfurrymale.lexiconDisplaySize=40
+    I:customnpcs.npcfurrymale.metadata=0
+    I:customnpcs.npcfurrymale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npchumanfemale
+    S:customnpcs.npchumanfemale.item=
+    I:customnpcs.npchumanfemale.lexiconDisplaySize=40
+    I:customnpcs.npchumanfemale.metadata=0
+    I:customnpcs.npchumanfemale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npchumanmale
+    S:customnpcs.npchumanmale.item=
+    I:customnpcs.npchumanmale.lexiconDisplaySize=40
+    I:customnpcs.npchumanmale.metadata=0
+    I:customnpcs.npchumanmale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcnagafemale
+    S:customnpcs.npcnagafemale.item=
+    I:customnpcs.npcnagafemale.lexiconDisplaySize=40
+    I:customnpcs.npcnagafemale.metadata=0
+    I:customnpcs.npcnagafemale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcnagamale
+    S:customnpcs.npcnagamale.item=
+    I:customnpcs.npcnagamale.lexiconDisplaySize=40
+    I:customnpcs.npcnagamale.metadata=0
+    I:customnpcs.npcnagamale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcorcfemale
+    S:customnpcs.npcorcfemale.item=
+    I:customnpcs.npcorcfemale.lexiconDisplaySize=40
+    I:customnpcs.npcorcfemale.metadata=0
+    I:customnpcs.npcorcfemale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcorcfmale
+    S:customnpcs.npcorcfmale.item=
+    I:customnpcs.npcorcfmale.lexiconDisplaySize=40
+    I:customnpcs.npcorcfmale.metadata=0
+    I:customnpcs.npcorcfmale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcpony
+    S:customnpcs.npcpony.item=
+    I:customnpcs.npcpony.lexiconDisplaySize=40
+    I:customnpcs.npcpony.metadata=0
+    I:customnpcs.npcpony.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcskeleton
+    S:customnpcs.npcskeleton.item=
+    I:customnpcs.npcskeleton.lexiconDisplaySize=40
+    I:customnpcs.npcskeleton.metadata=0
+    I:customnpcs.npcskeleton.rate=-1
+
+    # Configuration of Shedding for customnpcs.npcvillager
+    S:customnpcs.npcvillager.item=
+    I:customnpcs.npcvillager.lexiconDisplaySize=40
+    I:customnpcs.npcvillager.metadata=0
+    I:customnpcs.npcvillager.rate=-1
+
+    # Configuration of Shedding for customnpcs.npczombiefemale
+    S:customnpcs.npczombiefemale.item=
+    I:customnpcs.npczombiefemale.lexiconDisplaySize=40
+    I:customnpcs.npczombiefemale.metadata=0
+    I:customnpcs.npczombiefemale.rate=-1
+
+    # Configuration of Shedding for customnpcs.npczombiemale
+    S:customnpcs.npczombiemale.item=
+    I:customnpcs.npczombiemale.lexiconDisplaySize=40
+    I:customnpcs.npczombiemale.metadata=0
+    I:customnpcs.npczombiemale.rate=-1
+
     # Configuration of Shedding for enderzoo.ConcussionCreeper
     S:enderzoo.ConcussionCreeper.item=
     I:enderzoo.ConcussionCreeper.lexiconDisplaySize=40
@@ -2410,6 +2584,132 @@ shedding {
     I:menagerie.rat.lexiconDisplaySize=40
     I:menagerie.rat.metadata=0
     I:menagerie.rat.rate=-1
+
+    # Configuration of Shedding for npcEnderman
+    S:npcEnderman.item=
+    I:npcEnderman.lexiconDisplaySize=40
+    I:npcEnderman.metadata=0
+    I:npcEnderman.rate=-1
+
+    # Configuration of Shedding for npcGolem
+    S:npcGolem.item=
+    I:npcGolem.lexiconDisplaySize=40
+    I:npcGolem.metadata=0
+    I:npcGolem.rate=-1
+
+    # Configuration of Shedding for npccrystal
+    S:npccrystal.item=
+    I:npccrystal.lexiconDisplaySize=40
+    I:npccrystal.metadata=0
+    I:npccrystal.rate=-1
+
+    # Configuration of Shedding for npcdwarffemale
+    S:npcdwarffemale.item=
+    I:npcdwarffemale.lexiconDisplaySize=40
+    I:npcdwarffemale.metadata=0
+    I:npcdwarffemale.rate=-1
+
+    # Configuration of Shedding for npcdwarfmale
+    S:npcdwarfmale.item=
+    I:npcdwarfmale.lexiconDisplaySize=40
+    I:npcdwarfmale.metadata=0
+    I:npcdwarfmale.rate=-1
+
+    # Configuration of Shedding for npcelffemale
+    S:npcelffemale.item=
+    I:npcelffemale.lexiconDisplaySize=40
+    I:npcelffemale.metadata=0
+    I:npcelffemale.rate=-1
+
+    # Configuration of Shedding for npcelfmale
+    S:npcelfmale.item=
+    I:npcelfmale.lexiconDisplaySize=40
+    I:npcelfmale.metadata=0
+    I:npcelfmale.rate=-1
+
+    # Configuration of Shedding for npcenderchibi
+    S:npcenderchibi.item=
+    I:npcenderchibi.lexiconDisplaySize=40
+    I:npcenderchibi.metadata=0
+    I:npcenderchibi.rate=-1
+
+    # Configuration of Shedding for npcfurryfemale
+    S:npcfurryfemale.item=
+    I:npcfurryfemale.lexiconDisplaySize=40
+    I:npcfurryfemale.metadata=0
+    I:npcfurryfemale.rate=-1
+
+    # Configuration of Shedding for npcfurrymale
+    S:npcfurrymale.item=
+    I:npcfurrymale.lexiconDisplaySize=40
+    I:npcfurrymale.metadata=0
+    I:npcfurrymale.rate=-1
+
+    # Configuration of Shedding for npchumanfemale
+    S:npchumanfemale.item=
+    I:npchumanfemale.lexiconDisplaySize=40
+    I:npchumanfemale.metadata=0
+    I:npchumanfemale.rate=-1
+
+    # Configuration of Shedding for npchumanmale
+    S:npchumanmale.item=
+    I:npchumanmale.lexiconDisplaySize=40
+    I:npchumanmale.metadata=0
+    I:npchumanmale.rate=-1
+
+    # Configuration of Shedding for npcnagafemale
+    S:npcnagafemale.item=
+    I:npcnagafemale.lexiconDisplaySize=40
+    I:npcnagafemale.metadata=0
+    I:npcnagafemale.rate=-1
+
+    # Configuration of Shedding for npcnagamale
+    S:npcnagamale.item=
+    I:npcnagamale.lexiconDisplaySize=40
+    I:npcnagamale.metadata=0
+    I:npcnagamale.rate=-1
+
+    # Configuration of Shedding for npcorcfemale
+    S:npcorcfemale.item=
+    I:npcorcfemale.lexiconDisplaySize=40
+    I:npcorcfemale.metadata=0
+    I:npcorcfemale.rate=-1
+
+    # Configuration of Shedding for npcorcfmale
+    S:npcorcfmale.item=
+    I:npcorcfmale.lexiconDisplaySize=40
+    I:npcorcfmale.metadata=0
+    I:npcorcfmale.rate=-1
+
+    # Configuration of Shedding for npcpony
+    S:npcpony.item=
+    I:npcpony.lexiconDisplaySize=40
+    I:npcpony.metadata=0
+    I:npcpony.rate=-1
+
+    # Configuration of Shedding for npcskeleton
+    S:npcskeleton.item=
+    I:npcskeleton.lexiconDisplaySize=40
+    I:npcskeleton.metadata=0
+    I:npcskeleton.rate=-1
+
+    # Configuration of Shedding for npcvillager
+    S:npcvillager.item=
+    I:npcvillager.lexiconDisplaySize=40
+    I:npcvillager.metadata=0
+    I:npcvillager.rate=-1
+
+    # Configuration of Shedding for npczombiefemale
+    S:npczombiefemale.item=
+    I:npczombiefemale.lexiconDisplaySize=40
+    I:npczombiefemale.metadata=0
+    I:npczombiefemale.rate=-1
+
+    # Configuration of Shedding for npczombiemale
+    S:npczombiemale.item=
+    I:npczombiemale.lexiconDisplaySize=40
+    I:npczombiemale.metadata=0
+    I:npczombiemale.rate=-1
     S:witherSkeleton.item=
     I:witherSkeleton.lexiconDisplaySize=40
     I:witherSkeleton.metadata=0
