--- a/config/GalaxySpace/biomes.conf
+++ b/config/GalaxySpace/biomes.conf
@@ -1,7 +1,6 @@
 # Configuration file
 
 dimensions {
-    # ID Biome for ACentauri Bb
     I:IDACentauriBbBiome=218
     I:IDBarnarda2Biome=219
 
@@ -19,32 +18,14 @@ dimensions {
 
     # ID Biome for Barnarda C (Shores)
     I:IDBarnardaCBiomeShores=219
-
-    # ID Biome for Barnarda E
     I:IDBarnardaEBiome=222
-
-    # ID Biome for Barnarda F
     I:IDBarnardaFBiome=230
-
-    # ID Biome for Callisto (Jupiter moon)
     I:IDCallistoBiome=223
-
-    # ID Biome for Ceres
     I:IDCeresBiome=203
-
-    # ID Biome for Deimos (Mars moon)
     I:IDDeimosBiome=208
-
-    # ID Biome for Enceladus (Saturn moon)
     I:IDEnceladusBiome=213
-
-    # ID Biome for Europa (Jupiter moon)
     I:IDEuropaBiome=211
-
-    # ID Biome for Ganymede (Jupiter moon)
     I:IDGanymedeBiome=212
-
-    # ID Biome for Haumea
     I:IDHaumeaBiome=224
 
     # ID Ash Biome for Io (Jupiter moon)
@@ -55,17 +36,9 @@ dimensions {
 
     # ID Biome for Kuiper Belt
     I:IDKuiperBeltBiome=205
-
-    # ID Biome for Makemake
     I:IDMakemakeBiome=206
-
-    # ID Biome for Mercury
     I:IDMercuryBiome=201
-
-    # ID Biome for Oberon (Uranus moon)
     I:IDOberonBiome=215
-
-    # ID Biome for Phobos (Mars moon)
     I:IDPhobosBiome=207
     I:IDPlutoBiome=204
 
@@ -80,17 +53,11 @@ dimensions {
 
     # ID Biome for Pluto (4)
     I:IDPlutoBiome4=237
-
-    # ID Biome for Proteus (Neptune moon)
     I:IDProteusBiome=216
 
     # ID Biome for Titan (Saturn moon)
     I:IDTitanBiome=214
-
-    # ID Biome for Triton (Neptune moon)
     I:IDTritonBiome=217
-
-    # ID Biome for Vega B
     I:IDVegaBBiome=231
 
     # ID Biome for Venus
@@ -99,6 +66,8 @@ dimensions {
 
 
 general {
+    # Global ID Biome for Planets/Moons
+    I:IDSpaceBiome=200
 }
 
 
