--- a/config/RTG/biomes/vanilla.cfg
+++ b/config/RTG/biomes/vanilla.cfg
@@ -1426,6 +1426,18 @@ biome {
             #  [range: -1 ~ 40, default: -1]
             I:"Cave Frequency"=-1
 
+            # 1/x chance that packed ice spikes/lakes will generate when they normally would.
+            # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+            # Set to 0 to disable ice spikes.
+            #  [range: 0 ~ 2147483647, default: 3]
+            I:"Packed Ice Spike/Lake Chance"=3
+
+            #  [default: true]
+            B:"RTG Decoration: Ice Shrubs"=true
+
+            #  [default: true]
+            B:"RTG Decoration: Ice Trees"=true
+
             #  [default: ]
             S:"RTG Surface: Filler Block"=
 
@@ -1515,7 +1527,7 @@ biome {
             # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
             # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
             # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
-            #  [range: -1 ~ 2147483647, default: 64]
+            #  [range: -1 ~ 2147483647, default: 72]
             I:"Volcano Chance"=64
         }
 
@@ -1568,7 +1580,7 @@ biome {
             # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
             # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
             # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
-            #  [range: -1 ~ 2147483647, default: 64]
+            #  [range: -1 ~ 2147483647, default: 72]
             I:"Volcano Chance"=64
         }
 
@@ -1621,7 +1633,7 @@ biome {
             # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
             # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
             # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
-            #  [range: -1 ~ 2147483647, default: 64]
+            #  [range: -1 ~ 2147483647, default: 72]
             I:"Volcano Chance"=64
         }
 
@@ -1677,7 +1689,7 @@ biome {
             # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
             # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
             # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
-            #  [range: -1 ~ 2147483647, default: 64]
+            #  [range: -1 ~ 2147483647, default: 72]
             I:"Volcano Chance"=64
         }
 
@@ -1733,7 +1745,7 @@ biome {
             # 1/x chance that a volcano will generate if this biome has volcanoes enabled.
             # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
             # Set to -1 to use global setting. Set to 0 to disable volcanoes for this biome.
-            #  [range: -1 ~ 2147483647, default: 64]
+            #  [range: -1 ~ 2147483647, default: 72]
             I:"Volcano Chance"=64
         }
 
