--- a/config/RTG/rtg.cfg
+++ b/config/RTG/rtg.cfg
@@ -23,11 +23,6 @@ biomes {
     # If TRUE, uses the individual biome settings in the biome config files. If FALSE, disables all RTG surfaces and uses vanilla surfaces instead.
     #  [default: true]
     B:"Enable RTG Biome Surfaces"=true
-
-    # If you enter a biome ID here, the whole world will consist of only that biome (and rivers). Set to -1 to generate the world normally.
-    # Vanilla biome IDs can be found here: http://goo.gl/WqlAfV
-    # For modded biome IDs, use NEI and go [Options] > [Tools] > [Data Dumps] > Biomes > [Dump], and then refer to the 'biome.csv' file which can be found in your '/.minecraft/dumps' folder.
-    #  [range: -1 ~ 255, default: -1]
     I:"Generate only this biome ID"=-1
 
     # If RTG tries to generate an unsupported biome or a biome that has an ID conflict, it will generate this biome instead.
@@ -46,6 +41,11 @@ boulders {
 
     #  [default: true]
     B:"Enable Cobblestone Boulders"=true
+
+    # Set this to TRUE to allow UBC to override cobblestone boulders.
+    # This setting doesn't have any effect if UBC is not installed.
+    #  [default: true]
+    B:"UBC Boulders"=true
 }
 
 
@@ -74,8 +74,6 @@ debugging {
     # WARNING: This should only be enabled if you know what you're doing.
     #  [default: false]
     B:"Enable Debugging"=false
-
-    #  [default: false]
     B:"Show Debug Info in F3 Screen"=false
 }
 
@@ -96,6 +94,19 @@ dungeons {
 
     #  [default: true]
     B:"Generate Dungeons"=true
+}
+
+
+"flowing liquids" {
+    # 1/x chance that a lava stream will generate on the side of a hill or mountain.
+    # 0 = Never generate; 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+    #  [range: 0 ~ 2147483647, default: 200]
+    I:"Flowing Lava Chance"=200
+
+    # 1/x chance that a water stream will generate on the side of a hill or mountain.
+    # 0 = Never generate; 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+    #  [range: 0 ~ 2147483647, default: 200]
+    I:"Flowing Water Chance"=200
 }
 
 
@@ -251,6 +262,20 @@ ravines {
 }
 
 
+saplings {
+    # Set this to TRUE to allow RTG's custom trees to grow from vanilla saplings.
+    # RTG's custom trees can be grown only from the saplings that their leaves would drop naturally, and only in the biomes where they naturally generate.
+    # For example, you can only grow a Swamp Willow in a Swamp biome, and only with an Oak sapling (because Swamp Willows have Oak leaves).
+    #  [default: true]
+    B:"Enable RTG Saplings"=true
+
+    # 1/x chance that a vanilla sapling will grow one of RTG's custom trees.
+    # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
+    #  [range: 1 ~ 2147483647, default: 2]
+    I:"RTG Tree from Vanilla Sapling Chance"=2
+}
+
+
 "scattered features" {
     #  [default: true]
     B:"Generate Scattered Features"=true
@@ -359,16 +384,40 @@ volcanoes {
 
     # 1/x chance that a volcano will generate in a biome that has volcanoes enabled.
     # 1 = Always generate if possible; 2 = 50% chance; 4 = 25% chance
-    #  [range: 1 ~ 2147483647, default: 32]
+    #  [range: 1 ~ 2147483647, default: 36]
     I:"Volcano Chance"=32
 
-    # The block to use for the top of the volcano. Defaults to Obsidian.
+    # The main block to use for the surface of the volcano.
     #  [default: minecraft:obsidian]
     S:"Volcano block ID"=minecraft:obsidian
 
     # The meta value of the volcano block.
     #  [range: 0 ~ 15, default: 0]
     I:"Volcano block meta value"=0
+
+    # The block ID of the 1st volcano mix block.
+    #  [default: BiomesOPlenty:ashStone]
+    S:"Volcano mix 1 block ID"=BiomesOPlenty:ashStone
+
+    # The meta value of the 1st volcano mix block.
+    #  [range: 0 ~ 15, default: 0]
+    I:"Volcano mix 1 block meta value"=0
+
+    # The block ID of the 2nd volcano mix block.
+    #  [default: BiomesOPlenty:ash]
+    S:"Volcano mix 2 block ID"=BiomesOPlenty:ash
+
+    # The meta value of the 2nd volcano mix block.
+    #  [range: 0 ~ 15, default: 0]
+    I:"Volcano mix 2 block meta value"=0
+
+    # The block ID of the 3rd volcano mix block.
+    #  [default: minecraft:coal_block]
+    S:"Volcano mix 3 block ID"=minecraft:coal_block
+
+    # The meta value of the 3rd volcano mix block.
+    #  [range: 0 ~ 15, default: 0]
+    I:"Volcano mix 3 block meta value"=0
 }
 
 
