--- a/config/GalaxySpace/core.conf
+++ b/config/GalaxySpace/core.conf
@@ -28,11 +28,25 @@ general {
     # Enable/Disable new Main Menu.
     B:enableNewMenu=false
 
-    #  /ONLYMOON or /ONLYMARS, /ONLYPHOBOS, /ONLYDEIMOS, /ONLYEUROPA, /ONLYIO, /ONLYENCELADUS, /ONLYVENUS, /ONLYMERCURY, /ONLYCERES if wanted on one planet only.
+    # Fuel Generator power factor
+    I:coefficientFuelGenerator=3
+
+    # Geothermal Generator power factor
+    I:coefficientGeothermalGenerator=3
+
+    # Solar Wind Panel power factor
+    I:coefficientSolarWindPanel=3
     S:"Other mods ores for GC to generate on GS planets" <
      >
     B:"New Recipes Rocket"=true
     B:enableHolidayMessage=false
+}
+
+
+worldgen {
+    #  /ONLYMOON or /ONLYMARS, /ONLYPHOBOS, /ONLYDEIMOS, /ONLYEUROPA, /ONLYIO, /ONLYENCELADUS, /ONLYVENUS, /ONLYMERCURY, /ONLYCERES if wanted on one planet only.
+    S:"Other mods ores for GC to generate on GS planets" <
+     >
 }
 
 
