--- a/config/MatterOverdrive/Matter Overdrive.cfg
+++ b/config/MatterOverdrive/Matter Overdrive.cfg
@@ -95,6 +95,7 @@ client {
 ##########################################################################################################
 
 compatibility {
+    I:"TConstruct molten tritanium ID"=201
 }
 
 
