--- a/config/NotEnoughKeys.cfg
+++ b/config/NotEnoughKeys.cfg
@@ -26,6 +26,26 @@
         false
         false
      >
+    B:key.tarmor <
+        false
+        false
+        false
+     >
+    B:key.tbelt <
+        false
+        false
+        false
+     >
+    B:key.tgoggles <
+        false
+        false
+        false
+     >
+    B:key.tzoom <
+        false
+        false
+        false
+     >
 }
 
 
