--- a/config/TravellersGear_inv.cfg
+++ b/config/TravellersGear_inv.cfg
@@ -302,6 +302,36 @@ invconfig {
         22
      >
     B:Tile_isHidden=false
+    I:"Tinkers Glove" <
+        97
+        102
+     >
+    B:"Tinkers Glove_isHidden"=false
+    I:"Tinkers Heart Green" <
+        175
+        30
+     >
+    B:"Tinkers Heart Green_isHidden"=false
+    I:"Tinkers Heart Red" <
+        139
+        30
+     >
+    B:"Tinkers Heart Red_isHidden"=false
+    I:"Tinkers Heart Yellow" <
+        157
+        30
+     >
+    B:"Tinkers Heart Yellow_isHidden"=false
+    I:"Tinkers Knapsack" <
+        97
+        12
+     >
+    B:"Tinkers Knapsack_isHidden"=false
+    I:"Tinkers Mask" <
+        25
+        12
+     >
+    B:"Tinkers Mask_isHidden"=false
     I:Title <
         25
         102
