--- a/config/Treecapitator.cfg
+++ b/config/Treecapitator.cfg
@@ -322,10 +322,12 @@ tree_and_mod_configs {
     }
 
     tconstruct {
-        S:axeIDList=TConstruct:hatchet; TConstruct:mattock; TConstruct:lumberaxe
         M:modID=TConstruct
-        B:overrideIMC=false
+        S:axeIDList=TConstruct:hatchet; TConstruct:mattock; TConstruct:lumberaxe
         S:shearsIDList=
+
+        # This setting controls whether or not the mod config section it appears in will override an IMC message sent by that mod. [default: false]
+        B:overrideIMC=false
     }
 
     thaumcraft {
