--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -152,6 +152,10 @@ modules {
     B:wawla.thaumcraft.pedestalItem=true
     B:wawla.thaumcraft.wandCharge=true
     B:wawla.thaumcraft.wandItem=true
+    B:wawla.tinkers.hideLandmine=true
+    B:wawla.tinkers.showDryerItem=true
+    B:wawla.tinkers.showDryerTime=true
+    B:wawla.tinkers.showFurnace=true
     B:wawla.tnt.fuse=true
 }
 
@@ -285,6 +289,10 @@ server_forcing {
     B:wawla.thaumcraft.pedestalItem=false
     B:wawla.thaumcraft.wandCharge=false
     B:wawla.thaumcraft.wandItem=false
+    B:wawla.tinkers.hideLandmine=false
+    B:wawla.tinkers.showDryerItem=false
+    B:wawla.tinkers.showDryerTime=false
+    B:wawla.tinkers.showFurnace=false
     B:wawla.tnt.fuse=false
 }
 
