--- a/config/biomesoplenty/biomegen.cfg
+++ b/config/biomesoplenty/biomegen.cfg
@@ -138,13 +138,13 @@
     B:"Mesa Plateau F"=true
     B:MushroomIsland=false
     B:MushroomIslandShore=false
-    B:Ocean=true
+    B:Ocean=false
     B:Plains=true
     B:River=true
     B:"Roofed Forest"=true
     B:Savanna=true
     B:"Savanna Plateau"=true
-    B:Swampland=true
+    B:Swampland=false
     B:Taiga=true
     B:TaigaHills=true
 }
