--- a/config/agricraft/Configuration.cfg
+++ b/config/agricraft/Configuration.cfg
@@ -92,6 +92,9 @@ compatibility {
     B:OpenComputers=true
     B:RotaryCraft=true
 
+    # set to false to disable compatibility for TConstruct [default: true]
+    B:TConstruct=true
+
     # set to false to disable compatibility for Thaumcraft [default: true]
     B:Thaumcraft=true
 
