--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -87,7 +87,7 @@
 
 "climate incidences" {
     # relative incidence of cool zones like forest/plains/hills/taiga/roofed forest
-    I:"Cool Zone Incidence"=2
+    I:"Cool Zone Incidence"=1
 
     # relative incidence of hot zones like savanna/desert/plains/mesa
     I:"Hot Zone Incidence"=1
@@ -96,7 +96,7 @@
     I:"Snowy Zone Incidence"=1
 
     # relative incidence of warm zones like forest/plains/hills/jungle/swamp
-    I:"Warm Zone Incidence"=2
+    I:"Warm Zone Incidence"=1
 }
 
 
@@ -114,7 +114,7 @@
     B:"Half Zone Size"=true
 
     # Place mountains in chains
-    B:"Mountains in Mountain Chains"=false
+    B:"Mountains in Mountain Chains"=true
 
     # quarter the climate zone size from vanilla
     B:"Quarter Zone Size"=false
