--- a/config/DraconicEvolution.cfg
+++ b/config/DraconicEvolution.cfg
@@ -61,7 +61,7 @@ general {
     B:"Fast Summon Ritual"=false
 
     # Should Chaos Islands be generated
-    B:"Generate Chaos Islands"=false
+    B:"Generate Chaos Islands"=true
 
     # Should Ender comets be generated
     B:"Generate Ender Comets"=false
