--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -25,7 +25,7 @@
      >
 
     # Mobs are passive until provoked [default: false]
-    B:"Neutral Mobs"=false
+    B:"Neutral Mobs"=true
     I:"Potion Buff Chance (0-100)"=1
 
     # List of all the valid potion IDs a mob can spawn with. Amplifier is always x1
@@ -146,7 +146,7 @@ Main {
     B:"Villager Targeting"=true
 
     # How many days until ESM spawns mobs at full rate. [range: 0 ~ 2147483647, default: 7]
-    I:"Warm Up Days"=7
+    I:"Warm Up Days"=28
     B:"Xray Mobs"=true
 }
 
@@ -183,7 +183,6 @@ Witch {
 
 World {
     I:"Fort Dimensions" <
-        0
      >
     I:"Fort Distance"=1024
     I:"Fort Rarity"=100
@@ -217,11 +216,8 @@ Zombie {
 
     # What blocks will be targeted for destruction when not attacking players (Does not affect general digging, light sources are included by default, add ':#' for metadata e.g. 'minecraft:wool:1')
     S:"General Griefable Blocks" <
-        minecraft:chest
         minecraft:furnace
         minecraft:crafting_table
-        minecraft:melon_stem
-        minecraft:pumpkin_stem
         minecraft:fence_gate
         minecraft:melon_block
         minecraft:pumpkin
@@ -238,12 +234,11 @@ Zombie {
         minecraft:wooden_door
         minecraft:farmland
         minecraft:bookshelf
-        minecraft:sapling
         minecraft:bed
         minecraft:fence
      >
     B:Infectious=true
-    B:"Need Required Tools"=true
+    B:"Need Required Tools"=false
 
     # How many blocks to give zombies to pillar up with
     I:"Pillaring Blocks"=64
