--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -135,3 +135,41 @@ sluice {
 }
 
 
+worldgen {
+    I:"Dimension Blacklist" <
+        -5024
+        -5023
+        -5022
+        -5021
+        -5020
+        -5019
+        -5018
+        -5017
+        -5016
+        -5013
+        -5012
+        -5011
+        -5010
+        -5009
+        -5008
+        -5007
+        -5006
+        -5005
+        -5004
+        -5003
+        -112
+        -100
+        -42
+        -30
+        -29
+        -19
+        -2
+        -1
+        1
+        2
+        60
+        69
+     >
+}
+
+
