--- a/config/MatterOverdrive/Matter Overdrive.cfg
+++ b/config/MatterOverdrive/Matter Overdrive.cfg
@@ -58,7 +58,7 @@ client {
     B:"use holo shader"=true
 
     # Should Matter Overdrive check for newer versions, every time the world starts
-    B:version_check=true
+    B:version_check=false
 
     ##########################################################################################################
     # android_hud
@@ -143,7 +143,6 @@ entities {
     rogue_android {
         # Rogue Android biome blacklist [default: [Hell], [Sky], [MushroomIsland], [MushroomIslandShore]]
         S:biome.blacklist <
-            Hell
             Sky
             MushroomIsland
             MushroomIslandShore
@@ -180,6 +179,7 @@ entities {
             -7
             -6
             -5
+            -1
          >
 
         # The max amount of Rogue Android that can spawn in a given chunk
@@ -515,6 +515,7 @@ starmap {
             -7
             -6
             -5
+            -1
          >
     }
 
