--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -110,7 +110,7 @@
     B:"Jetpack Requires Jet Fuel"=true
     B:"Jetpack bypasses allow-flight property"=true
     I:"Liquid Spiller Range, Use Zero to Disable"=16
-    B:"Lock enchants on bedrock tools"=true
+    B:"Lock enchants on bedrock tools"=false
     B:"Log Block Placement and Removal"=false
     B:"Machine Warning Alarms"=false
     I:"Max Aerosolizer Range"=128
