--- a/config/SpecialAI.cfg
+++ b/config/SpecialAI.cfg
@@ -20,12 +20,12 @@ _general {
     D:call_for_help_on_death=0.2
 
     # (0.0-1.0) Chance for a depacify list to be aggressive, instead of just neutral. Default is 0.5% chance.
-    D:depacify_aggressive_chance=0.005
+    D:depacify_aggressive_chance=0.0
 
     # (Entity list) Comma-separated list of passive mobs (by entity id) that are made "neutral".
     # You may put a tilde (~) in front of any entity id to make it specific. Specific entity ids will not count any entities extending (i.e., based on) the specified entity.
     # May or may not work on mod mobs. Defaults to any kind of chicken, cow, pig, and sheep.
-    S:depacify_list=Chicken,Cow,Pig,Sheep,etfuturum.rabbit
+    S:depacify_list=
 
     # (True/false) If true, passive mobs will seek out and eat the items used to breed them laying on the floor. Default is true.
     B:eat_breeding_items=true
@@ -67,7 +67,7 @@ jockeys {
 
 passive_griefing {
     # (True/false) If true, mobs will passively grief you while not doing anything else. Default is true.
-    B:_enabled=true
+    B:_enabled=false
 
     # (True/false) If true, mobs will passively flip switches, press buttons, etc. while not doing anything else (uses the same range, reach, etc. as griefing, but has separate entity and block lists). Default is true.
     B:_fiddling_enabled=true
