--- a/config/butterflymania.cfg
+++ b/config/butterflymania.cfg
@@ -22,4 +22,27 @@ entitynames {
 }
 
 
+world--2862461171134954828 {
+    I:extinct-115=18
+    I:extinct-134=24
+    I:extinct-148=19
+    I:extinct-154=18
+    I:extinct-156=14
+    I:extinct-201=26
+    I:extinct-43=16
+    I:extinct-88=24
+}
+
+
+world-6680976503244448245 {
+    I:extinct-115=16
+    I:extinct-134=13
+    I:extinct-148=21
+    I:extinct-154=20
+    I:extinct-156=15
+    I:extinct-201=18
+    I:extinct-43=21
+    I:extinct-88=14
+}
+
 
