--- a/config/enviromine/profiles/default/CustomProperties/GardenStuff.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/GardenStuff.cfg
@@ -1,6 +1,12 @@
 # Configuration file
 
-block {
+##########################################################################################################
+# blocks
+#--------------------------------------------------------------------------------------------------------#
+# Customise the physical properties and environmental effects of blocks
+##########################################################################################################
+
+blocks {
 
     "GardenStuff:bloomery_furnace" {
         S:01.Name=GardenStuff:bloomery_furnace
