--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -18118,6 +18118,18 @@ jakjredstoneinmotion {
 }
 
 
+jsonables {
+    B:moltenauraconducting=false
+    B:moltenchromaalloy=false
+    B:moltenchromastone=false
+    B:moltenfiraxitealloy=false
+    B:moltenfluidic=false
+    B:moltenradiative=false
+    B:moltenresonating=false
+    B:moltenspatial=false
+}
+
+
 jurassicraft {
     B:tileamberore=true
     B:tileblockGypsumBlock=true
