--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 /screenshots/
 /shaderpacks/
 /tcnodetracker/
+/config/draconicevolution/
 
 # Custom Ore Gen default templates #
 /config/CustomOreGen/modules/default/
