--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4493,6 +4493,11 @@ computronics {
 }
 
 
+contenttweaker {
+    B:moltenchromaalloy=false
+}
+
+
 cookingbook {
     B:cookingoven=false
     B:cookingtable=false
