--- a/config/butterflymania.cfg
+++ b/config/butterflymania.cfg
@@ -5,7 +5,7 @@ butterflies {
     I:scalefactor=8
 
     # Set to 'reduced' for less butterflies spawning [default: normal]
-    S:spawnrate=reduced
+    S:spawnrate=normal
 
     # Whether or not to spawn butterflies in certain structures (nether stronghold, jungle temple, etc.), might fix random crashes [default: true]
     B:structurechecks=true
@@ -22,27 +22,36 @@ entitynames {
 }
 
 
-world--2862461171134954828 {
-    I:extinct-115=18
-    I:extinct-134=24
-    I:extinct-148=19
-    I:extinct-154=18
-    I:extinct-156=14
-    I:extinct-201=26
-    I:extinct-43=16
-    I:extinct-88=24
+player-bb7c2ac3-72aa-4ad8-8e00-4e0fb67a51ec {
+    I:catch-10=1
+    I:catch-106=2
+    I:catch-11=1
+    I:catch-167=1
+    I:catch-85=1
 }
 
 
-world-6680976503244448245 {
-    I:extinct-115=16
-    I:extinct-134=13
-    I:extinct-148=21
-    I:extinct-154=20
-    I:extinct-156=15
+world-5915708828129704708 {
+    I:extinct-115=23
+    I:extinct-134=11
+    I:extinct-148=24
+    I:extinct-154=13
+    I:extinct-156=12
+    I:extinct-201=23
+    I:extinct-43=30
+    I:extinct-88=23
+}
+
+
+world-6845819576286845465 {
+    I:extinct-115=23
+    I:extinct-134=10
+    I:extinct-148=28
+    I:extinct-154=26
+    I:extinct-156=16
     I:extinct-201=18
-    I:extinct-43=21
-    I:extinct-88=14
+    I:extinct-43=16
+    I:extinct-88=17
 }
 
 
